# My_kanban

./: .gitignore  README.md  pyproject.toml  requirements.txt
my_kanban/: __init__.py  auth.py  board.py  card.py  comment.py  membership.py  profile.py  utils.py
my_kanban/data/: db.py  db.sql  models.py
my_kanban/templates/: board.html  index.html  profile.html
my_kanban/templates/auth/: base.html  login.html  register.html
my_kanban/templates/card/: base.html  create.html  view.html
