[tool.poetry]
name = "my-kanban"
version = "0.1.0"
description = ""
authors = ["Mas5ive <empty>"]
readme = "README.md"
packages = [{include = "my_kanban"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
